# RAG

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  rag-system-guide.md  repomix-output.xml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_fts_to_chunks.py  003_drop_embedding_column.py
backend/src/: config.py  dependencies.py  main.py
backend/src/auth/: models.py  router.py  schemas.py  service.py
backend/src/db/: base.py  session.py
backend/src/documents/: chunker.py  models.py  parser.py  preprocessor.py  router.py  schemas.py  service.py
backend/src/embeddings/: service.py
backend/src/rag/: conversation.py  fusion.py  generator.py  qdrant.py  query_rewriter.py  reranker.py  retriever.py  router.py  schemas.py  service.py
backend/tests/: test_health.py
docs/: code-standards.md  codebase-summary.md  deployment-guide.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
evaluation/: README.md  benchmark.md  compare.py  llm_judge.py  multiturn_benchmark.md  run_eval.py  run_multiturn_eval.py  update_benchmark.py  update_multiturn_benchmark.py  upload_docs.py
frontend/: nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts.timestamp-1776746980130-0d5470fca06d5.mjs
frontend/src/: App.tsx  index.css
frontend/src/api/: auth-api.ts  client.ts  documents-api.ts  rag-api.ts
frontend/src/components/: layout.tsx  (+1 more)
plans/20260331-1530-rag-internal-knowledge-basecode/: plan.md
(+15 files in other folders)
