[tool.poetry]
name = "rag-backend"
version = "0.1.0"
description = "Internal Knowledge RAG System Backend"
authors = ["RAG Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pgvector = "^0.3.0"
pypdf = "^4.2.0"
python-docx = "^1.1.0"
sentence-transformers = "^3.0.0"
torch = "^2.3.0"
tiktoken = "^0.7.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "<4.1"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
loguru = "^0.7.2"
qdrant-client = "^1.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
